basic html and css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 </head>
 <body>
     <main>
-        
+        <div id="panel">
+            <div id="top">
+                <div class="elem">
+                    <h4>Hit</h4>
+                    <div class="box">5</div>
+                </div>
+                <div class="elem">
+                    <h4>Timer</h4>
+                    <div class="box">60</div>
+                </div>
+                <div class="elem">
+                    <h4>Score</h4>
+                    <div class="box">0</div>
+                </div>
+            </div>
+            <div id="bottom">
+                <div class="bubble">5</div>
+                <div class="bubble">5</div>
+            </div>
+        </div>
     </main>
 
 
