--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div id="panel">
             <div id="top">
                 <div class="elem">
-                    <h4>Hit</h4>
-                    <div class="box">5</div>
+                    <h4 >Hit</h4>
+                    <div class="box" id="hit">5</div>
                 </div>
                 <div class="elem">
                     <h4>Timer</h4>
@@ -25,8 +25,8 @@
                 </div>
             </div>
             <div id="bottom">
-                <div class="bubble">5</div>
-                <div class="bubble">5</div>
+
+                
             </div>
         </div>
     </main>
