--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 </div>
                 <div class="elem">
                     <h4>Timer</h4>
-                    <div class="box">60</div>
+                    <div class="box" id="timer">60</div>
                 </div>
                 <div class="elem">
                     <h4>Score</h4>
-                    <div class="box">0</div>
+                    <div class="box" id="score">0</div>
                 </div>
             </div>
             <div id="bottom">
