--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
                 </div>
                 <div class="elem">
                     <h4>Timer</h4>
-                    <div class="box" id="timer">60</div>
+                    <div class="box" id="timer">30</div>
                 </div>
                 <div class="elem">
                     <h4>Score</h4>
                     <div class="box" id="score">0</div>
                 </div>
+                <div class="elem">
+                    <button id="start">Start</button>
+                </div>
             </div>
             <div id="bottom">
-
                 
             </div>
         </div>
